--- a/control
+++ b/control
@@ -1,6 +1,6 @@
 #!/usr/bin/env ruby
 require 'rubygems'
-require "bundler/setup"
+require 'bundler/setup'
 
 Bundler.require(:default)
 ENV['BUNDLE_GEMFILE'] ||= File.join(Dir.pwd, 'Gemfile')
@@ -11,6 +11,7 @@ Daemons.run('bowd.rb',{
 	:mode => :load,
 	:dir_mode  => :normal,
 	:backtrace => true,
+	:monitor => true,
 	:dir => "#{File.dirname(__FILE__)}/tmp",
 	:log_dir => "#{File.dirname(__FILE__)}/log"
 })
